# three-address-cpu

./: .gitignore  README.md
emulator/: CMakeLists.txt  ConsoleApp.cpp  Emulator.cpp  Emulator.h
emulator/ConsoleApp/: CMakeLists.txt  ConsoleApp.cpp
emulator/Emulator/: CMakeLists.txt  Commands.h  Emulator.cpp  Emulator.h
emulator/FirstTask/: CMakeLists.txt  ConsoleApp.cpp  Emulator.cpp  Emulator.h  FirstTask.cpp  assembler-code.txt
emulator/GuiApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
emulator/SecondTask/: CMakeLists.txt  SecondTask.cpp  assembler-code.txt
